--- a/File Converter/File Converter.csproj
+++ b/File Converter/File Converter.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{B25C0800-0B0E-49A5-83D9-9ABD48309527}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>File_Converter</RootNamespace>
     <AssemblyName>File Converter</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
@@ -90,11 +90,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Control\PdfFileConverter.cs" />
-    <Compile Include="Control\FileConverter.cs" />
-    <Compile Include="Control\TextFileConverter.cs" />
+    <Compile Include="Controller\PdfFileConverter.cs" />
+    <Compile Include="Controller\FileConverter.cs" />
+    <Compile Include="Controller\TextFileConverter.cs" />
+    <Compile Include="Debug\Log.cs" />
+    <Compile Include="Debug\Logger.cs" />
     <Compile Include="Model\FileType.cs" />
     <Compile Include="Model\TextFileType.cs" />
+    <Compile Include="View\DebugLogWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\DebugLogWindow.Designer.cs">
+      <DependentUpon>DebugLogWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -103,6 +111,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="View\DebugLogWindow.resx">
+      <DependentUpon>DebugLogWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
