--- a/File Converter/packages.config
+++ b/File Converter/packages.config
@@ -6,4 +6,5 @@
   <package id="MaterialSkin.2" version="2.1.2" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net48" />
   <package id="Portable.BouncyCastle" version="1.8.5" targetFramework="net48" />
+  <package id="PrettyBin" version="1.1.0" targetFramework="net48" />
 </packages>
