--- a/File Converter/packages.config
+++ b/File Converter/packages.config
@@ -7,4 +7,12 @@
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Portable.BouncyCastle" version="1.8.6.7" targetFramework="net48" />
   <package id="PrettyBin" version="1.1.0" targetFramework="net48" />
+  <package id="Syncfusion.Compression.Base" version="18.2.0.59" targetFramework="net48" />
+  <package id="Syncfusion.DocIO.WinForms" version="18.2.0.59" targetFramework="net48" />
+  <package id="Syncfusion.DocToPDFConverter.WinForms" version="18.2.0.59" targetFramework="net48" />
+  <package id="Syncfusion.Licensing" version="18.2.0.59" targetFramework="net48" />
+  <package id="Syncfusion.OfficeChart.Base" version="18.2.0.59" targetFramework="net48" />
+  <package id="Syncfusion.OfficeChartToImageConverter.WinForms" version="18.2.0.59" targetFramework="net48" />
+  <package id="Syncfusion.Pdf.WinForms" version="18.2.0.59" targetFramework="net48" />
+  <package id="Syncfusion.SfChart.WPF" version="18.2.0.59" targetFramework="net48" />
 </packages>
