All text file conversions implemented

--- a/File Converter/App.config
+++ b/File Converter/App.config
@@ -10,6 +10,14 @@
         <assemblyIdentity name="BouncyCastle.Crypto" publicKeyToken="0e99375e54769942" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.8.6.0" newVersion="1.8.6.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Syncfusion.Licensing" publicKeyToken="632609b4d040f6b4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-18.3460.0.35" newVersion="18.3460.0.35" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Syncfusion.SfChart.WPF" publicKeyToken="3d67ed1f87d44c89" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-18.3460.0.35" newVersion="18.3460.0.35" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
