--- a/File Converter/packages.config
+++ b/File Converter/packages.config
@@ -5,14 +5,9 @@
   <package id="itext7" version="7.1.12" targetFramework="net48" />
   <package id="MaterialSkin.2" version="2.1.3" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net48" />
+  <package id="MicrosoftOfficeCore" version="15.0.0" targetFramework="net48" />
   <package id="Portable.BouncyCastle" version="1.8.6.7" targetFramework="net48" />
   <package id="PrettyBin" version="1.1.0" targetFramework="net48" />
-  <package id="Syncfusion.Compression.Base" version="18.2.0.59" targetFramework="net48" />
-  <package id="Syncfusion.DocIO.WinForms" version="18.2.0.59" targetFramework="net48" />
-  <package id="Syncfusion.DocToPDFConverter.WinForms" version="18.2.0.59" targetFramework="net48" />
-  <package id="Syncfusion.Licensing" version="18.2.0.59" targetFramework="net48" />
-  <package id="Syncfusion.OfficeChart.Base" version="18.2.0.59" targetFramework="net48" />
-  <package id="Syncfusion.OfficeChartToImageConverter.WinForms" version="18.2.0.59" targetFramework="net48" />
-  <package id="Syncfusion.Pdf.WinForms" version="18.2.0.59" targetFramework="net48" />
-  <package id="Syncfusion.SfChart.WPF" version="18.2.0.59" targetFramework="net48" />
+  <package id="sautinsoft.pdffocus" version="7.7.7.24" targetFramework="net48" />
 </packages>
