--- a/File Converter/packages.config
+++ b/File Converter/packages.config
@@ -2,12 +2,13 @@
 <packages>
   <package id="Common.Logging" version="3.4.1" targetFramework="net48" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net48" />
+  <package id="Imazen.WebP" version="10.0.1" targetFramework="net48" />
   <package id="itext7" version="7.1.12" targetFramework="net48" />
   <package id="MaterialSkin.2" version="2.1.3" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net48" />
   <package id="MicrosoftOfficeCore" version="15.0.0" targetFramework="net48" />
-  <package id="Portable.BouncyCastle" version="1.8.6.7" targetFramework="net48" />
+  <package id="Portable.BouncyCastle" version="1.8.8" targetFramework="net48" />
   <package id="PrettyBin" version="1.1.0" targetFramework="net48" />
   <package id="sautinsoft.pdffocus" version="7.7.7.24" targetFramework="net48" />
 </packages>
