--- a/File Converter/File Converter.csproj
+++ b/File Converter/File Converter.csproj
@@ -50,9 +50,6 @@
     <Reference Include="Common.Logging.Core, Version=3.4.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
       <HintPath>..\packages\Common.Logging.Core.3.4.1\lib\net40\Common.Logging.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Imazen.WebP, Version=10.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Imazen.WebP.10.0.1\lib\net45\Imazen.WebP.dll</HintPath>
-    </Reference>
     <Reference Include="itext.barcodes, Version=7.1.12.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <HintPath>..\packages\itext7.7.1.12\lib\net40\itext.barcodes.dll</HintPath>
     </Reference>
@@ -103,9 +100,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\ImageConversion\BmpFileConverter.cs" />
     <Compile Include="Controller\ImageConversion\GifFileConverter.cs" />
     <Compile Include="Controller\ImageConversion\JpgFileConverter.cs" />
     <Compile Include="Controller\ImageConversion\PngFileConverter.cs" />
+    <Compile Include="Controller\ImageConversion\TiffFileConverter.cs" />
     <Compile Include="Controller\ImageConversion\WebPFileConverter.cs" />
     <Compile Include="Controller\TextConversion\PdfFileConverter.cs" />
     <Compile Include="Controller\FileConverter.cs" />
@@ -171,7 +170,6 @@
   <ItemGroup>
     <None Include="Resources\baseline_text_snippet_black_18dp.png" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <ItemGroup>
