--- a/File Converter/File Converter.csproj
+++ b/File Converter/File Converter.csproj
@@ -102,6 +102,7 @@
   <ItemGroup>
     <Compile Include="Controller\ImageConversion\BmpFileConverter.cs" />
     <Compile Include="Controller\ImageConversion\GifFileConverter.cs" />
+    <Compile Include="Controller\ImageConversion\IcoFileConverter.cs" />
     <Compile Include="Controller\ImageConversion\JpgFileConverter.cs" />
     <Compile Include="Controller\ImageConversion\PngFileConverter.cs" />
     <Compile Include="Controller\ImageConversion\TiffFileConverter.cs" />
@@ -169,6 +170,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\baseline_text_snippet_black_18dp.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MainIcon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
