--- a/File Converter/File Converter.csproj
+++ b/File Converter/File Converter.csproj
@@ -15,7 +15,7 @@
     <AllowedReferenceRelatedFileExtensions>.none</AllowedReferenceRelatedFileExtensions>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -49,6 +49,9 @@
     </Reference>
     <Reference Include="Common.Logging.Core, Version=3.4.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
       <HintPath>..\packages\Common.Logging.Core.3.4.1\lib\net40\Common.Logging.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Imazen.WebP, Version=10.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Imazen.WebP.10.0.1\lib\net45\Imazen.WebP.dll</HintPath>
     </Reference>
     <Reference Include="itext.barcodes, Version=7.1.12.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <HintPath>..\packages\itext7.7.1.12\lib\net40\itext.barcodes.dll</HintPath>
@@ -103,6 +106,7 @@
     <Compile Include="Controller\ImageConversion\BmpFileConverter.cs" />
     <Compile Include="Controller\ImageConversion\GifFileConverter.cs" />
     <Compile Include="Controller\ImageConversion\IcoFileConverter.cs" />
+    <Compile Include="Controller\ImageConversion\ImageFileConverter.cs" />
     <Compile Include="Controller\ImageConversion\JpgFileConverter.cs" />
     <Compile Include="Controller\ImageConversion\PngFileConverter.cs" />
     <Compile Include="Controller\ImageConversion\TiffFileConverter.cs" />
@@ -173,6 +177,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\MainIcon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="libwebp.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
